# spookfish

./: .gitignore  CMakeLists.txt  README.md  main.cpp  raytracing.cl  shader.frag  shader.vert
